k8s/deployment-back-end.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: birds-app-back-end-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: birds-app-back-end-ajaxvp
  template:
    metadata:
      labels:
        app: birds-app-back-end-ajaxvp
    spec:
      containers:
        - image: 'ghcr.io/ajaxvp/birds-app-back-end:c7b113496801def80713e58642b497faaaf1e847'
          name: birds-back-front-end
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "32Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
