k8s/deployment-front-end.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: birds-app-front-end-deployment
spec:
  replicas: 100
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: birds-app-front-end-ajaxvp
  template:
    metadata:
      labels:
        app: birds-app-front-end-ajaxvp
    spec:
      containers:
        - image: 'ghcr.io/ajaxvp/birds-app-front-end:4641c1b21d2c3d39a92ca528c2567a7c0bec5b20'
          name: birds-app-front-end
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "32Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
