k8s/service-front-end.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: birds-app-front-end-service
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
  selector:
    app: birds-app-front-end-ajaxvp
